Aesthetic refinements for main page

--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -3,15 +3,19 @@
 <section class="hero is-primary is-home-hero">
   <div class="hero-body has-text-centered">
     <div class="container">
-      <p class="title is-size-1 is-size-2-mobile has-text-weight-light is-spaced">
+      <p class="title is-size-2 is-size-3-mobile has-text-weight-light is-spaced">
         {{ $description }}
       </p>
 
-      <p class="subtitle is-size-3 is-size-4-mobile has-text-weight-light">
+      <p class="subtitle is-size-4 is-size-5-mobile has-text-weight-light">
         {{ $tagline }}
       </p>
 
-      <a class="button is-light is-medium has-text-weight-bold is-learn-button">
+      <a class="button is-light has-text-weight-bold is-learn-button is-hidden-touch">
+        Learn Kubernetes basics
+      </a>
+
+      <a class="button is-light is-small has-text-weight-bold is-learn-button is-hidden-desktop">
         Learn Kubernetes basics
       </a>
     </div>
