--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -1,4 +1,13 @@
+{{ $fonts          := site.Params.fonts }}
+{{ $fontSlice := (slice) }}
+{{ range $fonts }}
+{{ $fontSlice = $fontSlice | append (printf "%s:%s" (replace .name " " "+") (delimit .sizes ",")) }}
+{{ end }}
+{{ $fontsUrl := printf "https://fonts.googleapis.com/css?family=%s" (delimit $fontSlice "|") }}
+{{ $sansSerifFont := (index (where $fonts "type" "sansserif") 0).name }}
+
 @charset "utf-8"
+@import url({{ $fontsUrl }})
 
 // Project-specific colors and variables
 $k8s-blue: #326ce5
@@ -6,15 +15,21 @@ $k8s-blue: #326ce5
 @import "bulma/sass/utilities/initial-variables"
 @import "bulma/sass/utilities/functions"
 
-// Bulma variable overrides
+$family-sans-serif: "{{ $sansSerifFont }}", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $primary: $k8s-blue
-$navbar-dropdown-arrow: $primary
 $navbar-height: 4rem
 $navbar-item-img-max-height: $navbar-height * 0.6
 
 @import "bulma/sass/utilities/derived-variables"
+
+$navbar-dropdown-arrow: $grey-lighter !important
+
 @import "bulma/bulma"
 
 .is-home-hero
   .is-learn-button
-    margin-top: 1.5rem
+    +touch
+      margin-top: .5rem
+
+    +desktop
+      margin-top: .75rem
