--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,10 +7,12 @@
     </title>
     {{ partial "css.html" . }}
   </head>
-  <body class="has-navbar-fixed-top">
-    {{ partial "navbar.html" . }}
+  <body class="page has-navbar-fixed-top">
+    <main class="main">
+      {{ partial "navbar.html" . }}
 
-    {{ block "main" . }}
-    {{ end }}
+      {{ block "main" . }}
+      {{ end }}
+    </main>
   </body>
 </html>
