--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,56 @@
 {{ define "main" }}
 {{ partial "home/hero.html" . }}
 {{ partial "home/info.html" . }}
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-vcentered">
+      <div class="column is-two-thirds">
+        <p class="title is-spaced is-size-4 is-size-5-mobile">
+          <a href="/docs/concepts/overview/what-is-kubernetes/">Kubernetes (k8s)</a> is an open source system for automating deployment, scaling, and management of containerized applications.
+        </p>
+
+        <p class="subtitle">
+          It groups containers that make up an application into logical units for easy management and discovery. Kubernetes builds upon <a href="http://queue.acm.org/detail.cfm?id=2898444">15 years of experience of running production workloads at Google</a>, combined with best-of-breed ideas and practices from the community.
+        </p>
+      </div>
+
+      <div class="column">
+        <img src="https://d33wubrfki0l68.cloudfront.net/1567471e7c58dc9b7d9c65dcd54e60cbf5870daa/da576/_common-resources/images/flower.png">
+      </div>
+    </div>
+
+    <div class="columns is-vcentered is-variable is-8">
+      <div class="column is-2">
+        <img src="https://d33wubrfki0l68.cloudfront.net/33a12d8be0bc50be4738443101616e968c7afb8f/2c641/_common-resources/images/scalable.png">
+      </div>
+
+      <div class="column">
+        <p class="title is-spaced is-size-4 is-size-5-mobile">
+          Planet scale
+        </p>
+
+        <p class="subtitle">
+          Designed on the same principles that allows Google to run billions of containers a week, Kubernetes can scale without increasing your ops team.
+        </p>
+      </div>
+    </div>
+
+    <div class="columns is-vcentered is-variable is-8">
+      <div class="column">
+        <p class="title is-spaced is-size-4 is-size-5-mobile">
+          Never outgrow
+        </p>
+
+        <p class="subtitle">
+          Whether testing locally or running a global enterprise, Kubernetes flexibility grows with you to deliver your applications consistently and easily no matter how complex your need is.
+        </p>
+      </div>
+
+      <div class="column is-2">
+        <img src="https://d33wubrfki0l68.cloudfront.net/dbc75a944a909b2d52bf24ad06d485eca12af892/4fb42/_common-resources/images/blocks.png">
+      </div>
+    </div>
+  </div>
+</section>
 {{ end }}
